[gd_scene load_steps=7 format=3 uid="uid://cykb38cjy1rp6"]

[ext_resource type="Theme" uid="uid://c3udww5em8di1" path="res://assets/themes/paper.tres" id="1_rxjwf"]
[ext_resource type="Script" uid="uid://cenfpmcq1r7y0" path="res://objects/action/action.gd" id="1_s7qvu"]
[ext_resource type="Texture2D" uid="uid://c2hcmrfm6ncj7" path="res://assets/objects/action_base.svg" id="3_wkiho"]
[ext_resource type="Texture2D" uid="uid://ba8ghat1tm5dt" path="res://assets/objects/action_base_selected.svg" id="4_28lkb"]
[ext_resource type="PackedScene" uid="uid://dmbmg3hr7y407" path="res://objects/flavor/flavor_line.tscn" id="4_ier5s"]
[ext_resource type="Texture2D" uid="uid://wmtx5m6736bn" path="res://assets/objects/action_progress.svg" id="6_gujod"]

[node name="Action" type="TextureButton"]
clip_children = 2
offset_right = 82.0
offset_bottom = 58.0
theme = ExtResource("1_rxjwf")
texture_normal = ExtResource("3_wkiho")
texture_pressed = ExtResource("4_28lkb")
script = ExtResource("1_s7qvu")
turns_waiting = 4

[node name="TopLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 2.0
offset_right = 68.0
offset_bottom = 18.0
theme_override_colors/font_color = Color(0.11, 0.11, 0.11, 0.156863)
theme_override_font_sizes/font_size = 10
text = "ACT 000"

[node name="BotLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 42.0
offset_right = 73.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0.11, 0.11, 0.11, 0.156863)
theme_override_font_sizes/font_size = 12
text = "PRIMED"
horizontal_alignment = 2
vertical_alignment = 2

[node name="TopBox" type="BoxContainer" parent="."]
layout_mode = 0
offset_right = 82.0
offset_bottom = 29.0

[node name="TopLine" parent="TopBox" instance=ExtResource("4_ier5s")]
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="BottomBox" type="BoxContainer" parent="."]
layout_mode = 0
offset_top = 29.0
offset_right = 82.0
offset_bottom = 58.0

[node name="BottomLine" parent="BottomBox" instance=ExtResource("4_ier5s")]
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="ProgressWipe" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 82.0
offset_bottom = 58.0
mouse_filter = 2
texture = ExtResource("6_gujod")
flip_h = true

[connection signal="pressed" from="." to="." method="_on_action_body_pressed"]
